Reorganized the Jetty modules so that the client can use them without installing CompressionHandler.
Deprecated gzip.mod in favor of compression-gzip.mod.

Renamed `CompressionHandler.registerCompression()` because there are many other methods called `put*` in the class.

Fixed `jetty-home/pom.xml` to generate the correct jetty-home.

Added distribution tests.

Signed-off-by: Simone Bordet <simone.bordet@gmail.com>